--- a/index.html
+++ b/index.html
@@ -295,8 +295,8 @@
     <div class="box-container">
         <div class="box">
             <h3>our branches</h3>
-            <a href="#"><i class="fas fa-arrow-right"></i>Bucuresti</a>
-            <a href="#"><i class="fas fa-arrow-right"></i>Timisoara</a>
+            <a href="#"><i class="fas fa-arrow-right"></i>Romania</a>
+      
         </div>
 
         <div class="box">
